Fix button size shrinking issue on safari

--- a/client/src/main.less
+++ b/client/src/main.less
@@ -58,6 +58,7 @@ body {
     z-index: 100;
     padding-left: 1ex;
     padding-right: 1ex;
+    min-height: min-content;
 
     > .balloon {
         padding: 0;
